# alien-power-control

./: README.md  g15-power-controller.service  requirements.txt  setup.cfg  setup.py
src/g15pc/: __init__.py  g_button.py  main.py  settings.py  tray.py
src/g15pc/acpi/: calls.py  shell.py  wrapper.py
src/g15pc/ipc/: client.py  common.py  server.py
src/g15pc/logger/: log_config.py  logger_config.json
src/g15pc/utils/: arg_parser.py  logger.py
