[metadata]
name = g15pc
version = attr: g15pc.settings.__version__
description = Dell G15 Power Control
long_description = file: README.md
long_description_content_type = text/markdown
author = Gabriel Carneiro
author_email = therealcarneiro@gmail.com
license = MIT
license_files = LICENSE
url = https://github.com/theRealCarneiro/g15-power-control
keywords = daemon, power control, tray, g15
classifiers =
    Programming Language :: Python :: 3
	Environment :: X11 Applications

[options]
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires = file: requirements.txt
package_dir = 
	= src

[options.entry_points]
console_scripts = 
	g15pc = g15pc.main:main

[options.packages.find]
where=src

[pylint.MAIN]
init-hook = from gi import require_version; require_version('Gtk', '3.0')
fail-under = 8

[pylint.REPORTS]
output-format = colorized

[pylint.DESIGN]
max-args = 10
max-attributes = 10

[pylint.FORMAT]
max-line-length = 120
max-module-lines = 15000

[pylint]
disable = missing-module-docstring, missing-function-docstring, missing-class-docstring

[flake8]
max-line-length = 120
